crates/math-core/tests/snapshots/conversion_test__sine_function_sqbrackets.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin[x]"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo>&ApplyFunction;</mo>
        <mrow>
            <mo stretchy="false">[</mo>
            <mi>x</mi>
            <mo stretchy="false">]</mo>
        </mrow>
    </mrow>
</math>
