crates/math-core/tests/snapshots/conversion_test__sine_function_stretch_parens.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin\\left(x\\right)"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mrow>
            <mo>(</mo>
            <mi>x</mi>
            <mo>)</mo>
        </mrow>
    </mrow>
</math>
