crates/math-core/tests/snapshots/conversion_test__sine_in_mathrm.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mathrm{\\sin}y"
---
<math>
    <mi>x</mi>
    <mrow><mspace/><mi>sin</mi></mrow>
    <mi>y</mi>
</math>
