crates/math-core/tests/snapshots/conversion_test__sine_in_mathrm_no_brackets.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mathrm\\sin y"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0" rspace="0">sin</mo>
    </mrow>
    <mi>y</mi>
</math>
