crates/math-core/tests/snapshots/conversion_test__sine_in_script.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x_\\sin"
---
<math>
    <msub>
        <mi>x</mi>
        <mrow><mspace/><mi>sin</mi></mrow>
    </msub>
</math>
