crates/math-core/tests/snapshots/conversion_test__sine_mixed_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin\\nolimits_0\\displaylimits^1\\limits"
---
<math>
    <munderover>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
</math>
