crates/math-core/tests/snapshots/conversion_test__sine_mixed_limits_2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin\\nolimits_0\\limits^1\\displaylimits"
---
<math>
    <msubsup>
        <mo lspace="0" rspace="0">sin</mo>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
</math>
