crates/math-core/tests/snapshots/conversion_test__sine_mixed_limits_3.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin\\displaylimits_0\\limits^1\\nolimits"
---
<math>
    <msubsup>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
</math>
