crates/math-core/tests/snapshots/conversion_test__sine_negative_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin\\!x"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mspace style="margin-left:-0.16666667em;"/>
        <mi>x</mi>
    </mrow>
</math>
