crates/math-core/tests/snapshots/conversion_test__sine_negative_space_after_argument.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin x\\!y"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>x</mi>
    </mrow>
    <mspace style="margin-left:-0.16666667em;"/>
    <mi>y</mi>
</math>
